--- a/models/marts/core/fct_sales.yml
+++ b/models/marts/core/fct_sales.yml
@@ -8,7 +8,7 @@ models:
       - name: order_item_id
         description: "Primary Key - unique to each order_item"
         tests:
-          - unique
+          # - unique (Should be unique for stg_order_items model)
           - not_null
       - name: order_id
         description: "Foreign Key - unique to each order. Each order_id maps one_to_many to order_item_id"
